--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@ browser=chrome
 env=https://www.google.com
 username=johndoe
 dataTableUrl =http://practice.cybertekschool.com/tables#edit
+googleUrl=https://www.google.com
+searchValue=Java
