--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>api</module>
         <module>java_Review</module>
+        <module>JavaInterviewPracticeQuestions</module>
     </modules>
 
 
